scripts/patch-wazuh-dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: wazuh
  labels:
    app: wazuh-dashboard
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 5601
  selector:
    app: wazuh-dashboard
