scripts/patch-wazuh-ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcaas-wazuh-ingress
  namespace: wazuh
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    traefik.ingress.kubernetes.io/backend-protocol: http
spec:
  ingressClassName: traefik
  rules:
  - host: deimos.mcaas.example.com
    http:
      paths:
      - backend:
          service:
            name: dashboard
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - deimos.mcaas.example.com
    secretName: wazuh-dashboard-tls
